# JARS

./: .dev_env  .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build.sh  exec.sh  main.py  nginx.conf  pyproject.toml  supervisord.conf  wsgi.py
src/co/deability/jars/: config.py
src/co/deability/jars/api/: __init__.py  app.py
src/co/deability/jars/api/blueprints/: analytics_blueprint.py
src/co/deability/jars/error/: EnvironmentError.py  __init__.py  environment_error.py  handling.py  jars_error.py  r_processing_error.py  r_script_error.py
src/co/deability/jars/service/: analytics_service.py
src/co/deability/lirs/: __init__.py  config.py
src/co/deability/lirs/api/: __init__.py  app.py
src/co/deability/lirs/api/blueprints/: analytics_blueprint.py
src/co/deability/lirs/error/: EnvironmentError.py  LirsError.py
src/co/deability/lirs/service/: analytics_service.py
test/: conftest.py  test_jars.py
