[project]
name = "jars"
version = "0.1.0"
description = "JARS is Just Another R Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "precommit>=4.2.0"
]
container = [
    "gunicorn>=23.0.0"
]
